--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -1,28 +1,24 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 .dashboard-container {
   display: flex;
   min-height: 100vh;
 }
 
-.sidebar {
-  width: 220px;
-  background-color: #2c3e50;
-  color: #fff;
-  padding: 20px;
-}
-
-.sidebar nav a {
-  display: block;
-  color: #fff;
-  margin: 10px 0;
-  text-decoration: none;
-}
-
-.sidebar nav a:hover {
-  text-decoration: underline;
-}
-
 .dashboard-content {
   flex: 1;
-  padding: 20px;
+  padding: 5px;
   background-color: #ecf0f1;
+}
+
+@media (max-width: 768px) {
+  .sidebarDesh {
+    display: none;
+  }
+  .dashboard-content {
+    padding: 0px 10px;
+  }
 }
