--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -10,6 +10,16 @@ button{
     border-radius: 20px;
 }
 
+.fundo{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.719);
+}
+
 .hamburger {
   font-size: 22px;
   background: none;
@@ -25,7 +35,6 @@ button{
   height: 100vh;
   background: #fff;
   border-right: 1px solid #eee;
-  z-index: 1000;
   padding: 20px;
   border-radius: 20px;
   overflow: hidden;
